--- a/tutorial/01.md
+++ b/tutorial/01.md
@@ -97,7 +97,7 @@ export default{
 `middlewares`中间件处理的东西,这里主要开发时候使用log, 这是`vuex`本身自带的 太自定义的没要研究过
 
 ## mutation-types
- 定义`mutatinon`里用到的方法常量值 ,统一处理在这里，一般都是业务字符串常量。
+ 定义`mutation`里用到的方法常量值，统一处理在这里，一般都是业务字符串常量。
  
 ```js
 // 设置查询分组值
@@ -109,7 +109,7 @@ export const UPDATE_SEARCH_VAL = "UPDATE_SEARCH_VAL"
 ```
 
 ## store
-store核心文件 其实应该第一个先说这个哈
+`store.js`核心文件，这里就是vuex基本的写法了，先引用vue和vuex 然后user(Vuex),把定义好的`modules`,`middlewares`引入进来然后返回一个Vuex.store
 ```js
 import Vue from 'vue'
 import Vuex from 'vuex'
