--- a/tutorial/01.md
+++ b/tutorial/01.md
@@ -94,7 +94,7 @@ export default{
 ```
 
 ## middlewares
-`middlewares`中间件处理的东西,这里主要开发时候使用log, 这是`vuex`本身自带的 太自定义的没要研究过
+`middlewares`中间件处理的东西，这里主要开发时候在控制台查看一些处理日志， `vuex`本身自带,其他没有研究过。
 
 ## mutation-types
  定义`mutation`里用到的方法常量值，统一处理在这里，一般都是业务字符串常量。
