--- a/tutorial/01.md
+++ b/tutorial/01.md
@@ -1,13 +1,13 @@
 # vuex的常用目录结构
 ```
- --modules
- -----saerch.js
- -----searchGrouop.js
- --actions.js
- --getters.js
- --middlewares.js
- --mutation-types.js
- --store.js
+ |--modules
+ |-----saerch.js
+ |-----searchGrouop.js
+ |--actions.js
+ |--getters.js
+ |--middlewares.js
+ |--mutation-types.js
+ |--store.js
 ```
 # 各文件使用说明
 ## modules 
